# looftalk-backend

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs
src/controller/: mod.rs
src/controller/chat/: mod.rs
src/controller/room/: mod.rs
src/controller/user/: mod.rs
src/service/: user_service.rs
src/shared/: mod.rs
src/shared/env/: config.rs  mod.rs
src/shared/init/: mod.rs
src/shared/state/: mariadb.rs  mod.rs
